<resources>
    <string name="str_app_name">守门狗</string>
    <string name="str_call_number" translatable="false">0415-xxxxxxxx</string>
    <string name="str_cm" translatable="false">cm</string>
    <string name="str_kg" translatable="false">kg</string>
    <string name="str_logo_title">守门狗</string>
    <string name="str_acquire_code">获取验证码</string>
    <string name="str_acquire_code_hint">请输入验证码</string>
    <string name="str_add">添加</string>
    <string name="str_addition_failed">添加失败！</string>
    <string name="str_addition_success">添加成功！</string>
    <string name="str_not_correct_device">不是合适的设备</string>
    <string name="str_address">地址</string>
    <string name="str_alert_content">内容</string>
    <string name="str_alert_list">警报目录</string>
    <string name="str_auth_code">验证码</string>
    <string name="str_auth_code_failed">验证码不正确</string>
    <string name="str_auth_code_not_available">验证码已不再有效</string>
    <string name="str_back">返回</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>
    <string name="str_agree">同意</string>
    <string name="str_nonagree">不同意</string>
    <string name="str_contact_1">联系人1</string>
    <string name="str_contact_2">联系人2</string>
    <string name="str_contact_3">联系人3</string>
    <string name="str_input_contact_name">请输入联系人姓名</string>
    <string name="str_input_contact_phone">请输入联系人电话号码</string>
    <string name="str_date">日期</string>
    <string name="str_delete">删除</string>
    <string name="str_deletion_failed">删除失败！</string>
    <string name="str_deletion_success">删除成功！</string>
    <string name="str_edit">编辑</string>
    <string name="str_edition_failed">编辑失败！</string>
    <string name="str_edition_success">编辑成功！</string>
    <string name="str_forgot_password">忘记密码</string>
    <string name="str_group">小组</string>
    <string name="str_location_label">场景标签</string>
    <string name="str_login">登      录</string>
    <string name="str_login_success">登录成功！</string>
    <string name="str_login_failed">登录失败！</string>
    <string name="str_logout">退出登录</string>
    <string name="str_my_device">我的设备</string>
    <string name="str_next_step">下一步</string>
    <string name="str_new_password">新密码</string>
    <string name="str_ok">确认</string>
    <string name="str_old_password">密码</string>
    <string name="str_password">密码</string>
    <string name="str_password_hint">请输入密码</string>
    <string name="str_new_password_set_hint">请设置新的密码（6–20位）</string>
    <string name="str_password_set_hint">请设置密码（6–20位）</string>
    <string name="str_password_invalid">密码由6-20数字和字母组成</string>
    <string name="str_phone_number">手机号</string>
    <string name="str_phone_number_hint">请输入手机号</string>
    <string name="str_phone_number_incorrect">手机号不正确</string>
    <string name="str_playing_failed">播放视频失败！</string>
    <string name="str_qr_code">二维码</string>
    <string name="str_quiz_forgot_password">忘记了你的密码?</string>
    <string name="str_page_loading_failed">通讯失败</string>
    <string name="str_register">注      册</string>
    <string name="str_confirm_register">确认注册</string>
    <string name="str_back_login">返回登录</string>
    <string name="str_registration_failed">注册失败！</string>
    <string name="str_registration_success">注册成功！</string>
    <string name="str_required">必填</string>
    <string name="str_reset_failed">密碼更新失败！</string>
    <string name="str_reset_success">密碼更新成功！</string>
    <string name="str_save">保存</string>
    <string name="str_minute">分</string>
    <string name="str_second">秒</string>
    <string name="str_sensor_device">设备</string>
    <string name="str_sensor_list">设备目录</string>
    <string name="str_setup">设置</string>
    <string name="str_user_data">个人资料</string>
    <string name="str_remove_account">注销账号</string>
    <string name="str_saving_user_info_failed">更改失败！</string>
    <string name="str_saving_user_info_success">更改成功！</string>
    <string name="str_user_name">名字</string>
    <string name="str_auth_code1">验证码：</string>
    <string name="str_will_delete_device">要删除设备吗? 无法撤消此操作</string>
    <string name="str_will_delete_group">要删除此组吗? 无法撤消此操作</string>
    <string name="str_agree_text">我已仔细阅读并同意《用户协议》与《隐私政策》</string>
    <string name="str_agree_user_agreement">《用户协议》</string>
    <string name="str_agree_privacy_policy">《隐私政策》</string>
    <string name="str_health">健康</string>
    <string name="str_location">位置</string>
    <string name="str_discover">发现</string>
    <string name="str_home">首页</string>
    <string name="str_discover_title">救援常识</string>
    <string name="str_device">设备</string>
    <string name="str_user">我的</string>
    <string name="str_bind">绑定</string>
    <string name="str_bind_watch">绑定手表</string>
    <string name="str_heart_rate">心率</string>
    <string name="str_weather">天气</string>
    <string name="str_update_time">更新时间: %s</string>
    <string name="str_count_per_min">(次/分钟)</string>
    <string name="str_mmhg">(mmHg)</string>
    <string name="str_temp_unit">(°C)</string>
    <string name="str_high_rate">最高心率： %s 次/分钟</string>
    <string name="str_low_rate">最低心率： %s 次/分钟</string>
    <string name="str_health_display">健康显示</string>
    <string name="str_normal_rate_area">正常心率区间：</string>
    <string name="str_normal_rate_area_value">%d~%d 次/分钟</string>
    <string name="str_normal_temp_area">正常体温区间：</string>
    <string name="str_normal_temp_value">%s~%s°C</string>
    <string name="str_normal_pressure_area">正常血压区间：</string>
    <string name="str_normal_pressure_value">高压%s~%s mmHg\n低压%s~%s mmHg</string>
    <string name="str_normal_rate_area_setting">心率异常提示范围设置</string>
    <string name="str_normal_rate_area_desc">当测量的心率超出设置范围时， 系统将提示您</string>
    <string name="str_health_period">获取频率： </string>
    <string name="str_high_rate_value">最大值： </string>
    <string name="str_low_rate_value">最小值： </string>
    <string name="str_rate_value_hint">请输入数值 （次/分钟）</string>
    <string name="str_set_rate_error">最小值不能超过最大值</string>
    <string name="str_notification_list">消息列表</string>
    <string name="str_view">查看</string>
    <string name="str_bind_watch_list">手表列表</string>
    <string name="str_set_default_control">设为默认监控</string>
    <string name="str_set_current_control">手表列表监控</string>
    <string name="str_bind_device">绑定设备</string>
    <string name="str_abnormal_record">心率异常记录</string>
    <string name="str_rest_record">静息心率记录</string>
    <string name="str_survey_date">测量日期</string>
    <string name="str_survey_time">测量时间</string>
    <string name="str_health_suggest">健康提示:</string>
    <string name="str_health_suggest_text">异常可能由多种健康问题导致，如需医疗咨询，请拨打健康咨询热线：400-0909-119或联系客服。</string>
    <string name="str_call_phone">拨打电话</string>
    <string name="str_discover_detail">发现详情</string>
    <string name="str_device_manage">设备管理</string>
    <string name="str_smart_watch">智能手表</string>
    <string name="str_fire_sensor">物联网烟感报警器</string>
    <string name="str_smoke_sensor">物联网燃气报警器</string>
    <string name="str_serial">设备串号：</string>
    <string name="str_phonenumber">电话号码：</string>
    <string name="str_network_state">状态：</string>
    <string name="str_charging">剩余电量：</string>
    <string name="str_normal">正常</string>
    <string name="str_no_take">佩戴异常</string>
    <string name="str_work_state">工作状态：</string>
    <string name="str_low_charging">低电量</string>
    <string name="str_alarm_state">报警状态：</string>
    <string name="str_alarm">报警</string>
    <string name="str_service_term">服务期：</string>
    <string name="str_bind_service_term">服务期为：</string>
    <string name="str_detail">详情</string>
    <string name="str_goto">续费</string>
    <string name="str_sos_contact_set">紧急联系人设置</string>
    <string name="str_alarm_set">备忘录</string>
    <string name="str_push_manage">推送管理</string>
    <string name="str_account_manage">账号管理</string>
    <string name="str_change_password">修改密码</string>
    <string name="str_main_data">基本信息</string>
    <string name="str_face_photo">头像</string>
    <string name="str_upload_photo">上传头像</string>
    <string name="str_name">姓名</string>
    <string name="str_sex">性别</string>
    <string name="str_woman">女</string>
    <string name="str_man">男</string>
    <string name="str_birthday">生日</string>
    <string name="str_input_required">点击输入（必填）</string>
    <string name="str_select_required">点击选择（必选）</string>
    <string name="str_select">点击选择</string>
    <string name="str_contact_data">联系信息</string>
    <string name="str_phone">电话</string>
    <string name="str_weixin_id">微信ID</string>
    <string name="str_input">点击输入</string>
    <string name="str_qq_number">QQ号码</string>
    <string name="str_mail">邮箱</string>
    <string name="str_sos_contact_name_desc">名字不能为空，请输入名字后重试！</string>
    <string name="str_sos_contact_phonenumber_desc">手机号不能为空，请输入手机号后重试！</string>
    <string name="str_sos_contact_code_desc">验证码不能为空，请输入验证码后重试！</string>
    <string name="str_first_sos_contact">第一紧急联系人</string>
    <string name="str_input_name">请填写姓名</string>
    <string name="str_phonenumber1">电话号码</string>
    <string name="str_input_phone_number">请输入手机号码</string>
    <string name="str_input_phonenumber">请输入电话号码</string>
    <string name="str_select_sex">请先择性别</string>
    <string name="str_second_sos_contact">第二紧急联系人</string>
    <string name="str_third_sos_contact">第三紧急联系人</string>
    <string name="str_suggest">提示：</string>
    <string name="str_update">修改</string>
    <string name="str_update_success">修改成功</string>
    <string name="str_update_failed">修改失败</string>
    <string name="str_monday">周一</string>
    <string name="str_tuesday">周二</string>
    <string name="str_wednesday">周三</string>
    <string name="str_thursday">周四</string>
    <string name="str_friday">周五</string>
    <string name="str_saturday">周六</string>
    <string name="str_sunday">周日</string>
    <string name="str_work_day">工作日</string>
    <string name="str_week_end">周末</string>
    <string name="str_week_daily">每天</string>
    <string name="str_no_alarm">暂无备忘录</string>
    <string name="str_alarm_add">新增备忘录</string>
    <string name="str_alarm_name">名称</string>
    <string name="str_alarm_time">时间</string>
    <string name="str_alarm_suggest">提示</string>
    <string name="str_repeat">重复</string>
    <string name="str_no_repeat">不重复</string>
    <string name="str_delete_alarm">你真的要删除警报吗?</string>
    <string name="str_system_wake_permission">系统提醒权限</string>
    <string name="str_system_wake_permission_desc">提示音提醒、亮屏提醒、振动提醒、呼吸灯提醒、闪光灯提醒未开启，您可能会错过SOS求援、消防警情提醒等重要消息提示，强烈建议您开启全部提醒授权！</string>
    <string name="str_get_permission">去授权</string>
    <string name="str_notification_manage">通知管理</string>
    <string name="str_notification_sound">通知提示音</string>
    <string name="str_follow_system">跟随系统</string>
    <string name="str_sos_emergency">SOS救援消息</string>
    <string name="str_sos_emergency_desc">手表端发起SOS求援请求时，系统会第一时间提醒您，强烈建议您开启此消息提示！</string>
    <string name="str_fire_alarm">消防警情消息</string>
    <string name="str_fire_alarm_desc">当您绑定的物联网消防监控设备监测到警情时，系统会第一时间提醒您，强烈建议您开启此消息提示！</string>
    <string name="str_disconnect_watch">手表离线提醒</string>
    <string name="str_year1">1年</string>
    <string name="str_position_frequency_setting">定位频率设置</string>
    <string name="str_common_mode">普通模式</string>
    <string name="str_position_frequency_15minute">定位频率为每15分钟定位一次</string>
    <string name="str_power_saving_mode">省电模式</string>
    <string name="str_position_frequency_60minute">定位频率为每60分钟定位一次</string>
    <string name="str_emergency_mode">紧急模式（能耗较大）</string>
    <string name="str_position_frequency_minute">定位频率为每分钟定位一次</string>
    <string name="str_electronic_fence_setting">电子围栏设置</string>
    <string name="str_new">新增</string>
    <string name="str_select_start_time">请选择开始时间</string>
    <string name="str_to">至</string>
    <string name="str_select_end_time">请选择结束时间</string>
    <string name="str_muy_service">我的服务</string>
    <string name="str_new_version">新版本已上架了，请到应用市场下载安装</string>
    <string name="str_verify">确认</string>
</resources>