<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/dim_gap_3"
	android:background="@drawable/dialog_bg">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/dim_font_3"
		android:text="@string/str_position_frequency_setting"
		android:textColor="@android:color/black"
		android:layout_marginBottom="@dimen/dim_gap_2"/>
	<LinearLayout
		android:id="@+id/ID_LYT_COMMON_MODE"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables">
		<ImageView
			android:layout_width="@dimen/dim_icon_size"
			android:layout_height="@dimen/dim_icon_size"
			android:padding="@dimen/dim_gap_1"
			android:layout_marginEnd="@dimen/dim_gap_3"
			android:src="@drawable/check_selector"
			tools:ignore="ContentDescription" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_common_mode"/>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/dim_font_2"
		android:text="@string/str_position_frequency_15minute"
		android:textColor="@android:color/darker_gray"
		android:layout_marginStart="@dimen/dim_gap_7"
		android:layout_marginBottom="@dimen/dim_gap_2"/>
	<LinearLayout
		android:id="@+id/ID_LYT_POWER_SAVING_MODE"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables">
		<ImageView
			android:layout_width="@dimen/dim_icon_size"
			android:layout_height="@dimen/dim_icon_size"
			android:padding="@dimen/dim_gap_1"
			android:layout_marginEnd="@dimen/dim_gap_3"
			android:src="@drawable/check_selector"
			tools:ignore="ContentDescription" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_power_saving_mode"/>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/dim_font_2"
		android:text="@string/str_position_frequency_60minute"
		android:textColor="@android:color/darker_gray"
		android:layout_marginStart="@dimen/dim_gap_7"
		android:layout_marginBottom="@dimen/dim_gap_2"/>
	<LinearLayout
		android:id="@+id/ID_LYT_EMERGENCY_MODE"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables">
		<ImageView
			android:layout_width="@dimen/dim_icon_size"
			android:layout_height="@dimen/dim_icon_size"
			android:padding="@dimen/dim_gap_1"
			android:layout_marginEnd="@dimen/dim_gap_3"
			android:src="@drawable/check_selector"
			tools:ignore="ContentDescription" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_emergency_mode"/>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/dim_font_2"
		android:text="@string/str_position_frequency_minute"
		android:textColor="@android:color/darker_gray"
		android:layout_marginStart="@dimen/dim_gap_7"
		android:layout_marginBottom="@dimen/dim_gap_2"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/dim_gap_0"
		android:background="@color/color_tab_normal"
		android:layout_marginBottom="@dimen/dim_gap_2"/>
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/dim_gap_2">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/dim_font_3"
			android:layout_centerVertical="true"
			android:text="@string/str_electronic_fence_setting"
			android:textColor="@android:color/black"
			android:layout_marginBottom="@dimen/dim_gap_2"/>
		<TextView
			android:id="@+id/ID_BTN_NEW"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:background="@drawable/selector_small_button_fill"
			android:paddingTop="@dimen/dim_gap_1"
			android:paddingBottom="@dimen/dim_gap_1"
			android:paddingLeft="@dimen/dim_gap_2"
			android:paddingRight="@dimen/dim_gap_2"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/white"
			android:text="@string/str_new"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>
	<ListView
		android:id="@+id/ID_LSTVIEW_ELECTRONIC_FENCE"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:scrollbars="none"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="@dimen/dim_gap_3">
		<TextView
			android:id="@+id/ID_TXTVIEW_CANCEL"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_cancel"
			android:textColor="@color/button_text_color"/>
		<TextView
			android:id="@+id/ID_TXTVIEW_CONFIRM"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_confirm"
			android:textColor="@color/button_text_color"/>
	</LinearLayout>

</LinearLayout>