<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/dim_gap_2"
	android:background="@drawable/dialog_bg">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="@dimen/dim_font_3"
		android:text="@string/str_normal_rate_area_setting"
		android:textColor="@android:color/black"
		android:layout_marginTop="@dimen/dim_gap_5"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="@dimen/dim_font_2"
		android:text="@string/str_normal_rate_area_desc"
		android:textColor="@android:color/holo_red_light"
		android:layout_marginTop="@dimen/dim_gap_5"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/dim_gap_4"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_high_rate_value"
			android:textColor="@android:color/black"
			android:layout_marginRight="@dimen/dim_gap_2"/>
		<EditText
			android:id="@+id/ID_EDTTEXT_MAX_VALUE"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/dim_gap_2"
			android:background="@drawable/edt_bg_selector"
			android:maxLength="5"
			android:inputType="number"
			android:digits="0123456789"
			android:singleLine="true"
			android:hint="@string/str_rate_value_hint"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/dim_gap_2"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_low_rate_value"
			android:textColor="@android:color/black"
			android:layout_marginRight="@dimen/dim_gap_2"/>
		<EditText
			android:id="@+id/ID_EDTTEXT_MIN_VALUE"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/dim_gap_2"
			android:background="@drawable/edt_bg_selector"
			android:maxLength="5"
			android:inputType="number"
			android:digits="0123456789"
			android:singleLine="true"
			android:hint="@string/str_rate_value_hint"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/dim_gap_5"
		android:layout_marginBottom="@dimen/dim_gap_3">
		<TextView
			android:id="@+id/ID_TXTVIEW_CANCEL"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_cancel"
			android:textColor="@color/button_text_color"/>
		<TextView
			android:id="@+id/ID_TXTVIEW_CONFIRM"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_confirm"
			android:textColor="@color/button_text_color"/>
	</LinearLayout>

</LinearLayout>