<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

	<TextView
		android:id="@+id/ID_TXTVIEW_START_TIME"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="3"
		android:padding="@dimen/dim_gap_1"
		android:gravity="center"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_select_start_time"/>

	<TextView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:padding="@dimen/dim_gap_1"
		android:gravity="center"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_to"/>

	<TextView
		android:id="@+id/ID_TXTVIEW_END_TIME"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="3"
		android:padding="@dimen/dim_gap_1"
		android:gravity="center"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_select_end_time"/>
</LinearLayout>