<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@android:color/white"
	android:id="@+id/ID_ROOT_VIEW"
	tools:context="com.iot.shoumengou.activity.ActivityHealthDisplay">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/title_bar_height"
		android:background="@color/color_tab_selected">
		<ImageView
			android:id="@+id/ID_IMGVIEW_BACK"
			android:layout_width="@dimen/dim_icon_size"
			android:layout_height="@dimen/dim_icon_size"
			android:layout_centerVertical="true"
			android:layout_margin="@dimen/dim_gap_0"
			android:src="@drawable/ic_back_img"/>
		<TextView
			android:id="@+id/ID_TXTVIEW_TITLE"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dim_font_3"
			android:text="@string/str_health_display"/>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/dim_gap_4"
		android:layout_marginBottom="@dimen/dim_gap_4"
		android:gravity="center">
		<TextView
			android:id="@+id/ID_TXTVIEW_ABNORMAL_RECORD"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_margin="@dimen/dim_gap_3"
			android:textColor="@android:color/holo_blue_dark"
			android:textSize="@dimen/dim_font_3"
			android:text="@string/str_abnormal_record"/>
		<TextView
			android:id="@+id/ID_TXTVIEW_REST_RECORD"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_margin="@dimen/dim_gap_3"
			android:textColor="@android:color/holo_blue_dark"
			android:textSize="@dimen/dim_font_3"
			android:text="@string/str_rest_record"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/dim_gap_2"
		android:background="@color/color_list_item"
		android:layout_marginLeft="@dimen/dim_gap_4"
		android:layout_marginRight="@dimen/dim_gap_4"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:textStyle="bold"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/black"
			android:text="@string/str_survey_date"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:textStyle="bold"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/black"
			android:text="@string/str_survey_time"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:textStyle="bold"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/black"
			android:text="@string/str_heart_rate"/>

	</LinearLayout>

	<ListView
		android:id="@+id/ID_LSTVIEW_HEART_RATE"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_marginLeft="@dimen/dim_gap_4"
		android:layout_marginRight="@dimen/dim_gap_4"
		android:divider="@null"
		android:scrollbars="none"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/shape_white_fill"
		android:layout_marginLeft="@dimen/dim_gap_4"
		android:layout_marginRight="@dimen/dim_gap_4"
		android:layout_marginTop="@dimen/dim_gap_3"
		android:layout_marginBottom="@dimen/dim_gap_6"
		android:padding="@dimen/dim_gap_4"
		android:elevation="@dimen/dim_gap_2"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/dim_font_3"
				android:textColor="@android:color/black"
				android:text="@string/str_health_suggest"/>
			<ImageView
				android:layout_width="@dimen/dim_icon_size"
				android:layout_height="@dimen/dim_icon_size"
				android:padding="@dimen/dim_gap_1"
				android:src="@drawable/ic_info"/>
		</LinearLayout>
		<TextView
			android:id="@+id/ID_TXTVIEW_ADVICE_CONTENT"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/dim_font_2"
			android:textColorLink="@android:color/holo_blue_dark"
			android:textColor="@android:color/darker_gray"
			android:text="@string/str_health_suggest_text"/>
		<TextView
			android:id="@+id/ID_TXTVIEW_CALL_PHONE"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:textSize="@dimen/dim_font_3"
			android:textColor="@android:color/holo_blue_dark"
			android:text="@string/str_call_phone"/>
	</LinearLayout>
</LinearLayout>
