<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/dim_gap_2"
	android:background="@drawable/dialog_bg">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="@dimen/dim_font_3"
		android:text="@string/str_alarm_suggest"
		android:textColor="@android:color/black"
		android:layout_margin="@dimen/dim_gap_5"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/dim_gap_5"
		android:paddingRight="@dimen/dim_gap_5"
		android:text="@string/str_new_version"
		android:textColor="@android:color/black"
		android:textSize="@dimen/dim_font_2" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/dim_gap_5"
		android:layout_marginBottom="@dimen/dim_gap_3">

		<TextView
			android:id="@+id/ID_TXTVIEW_CANCEL"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:text="@string/str_cancel"
			android:textColor="@color/button_text_color"
			android:textSize="@dimen/dim_font_2"
			android:visibility="gone" />

		<TextView
			android:id="@+id/ID_TXTVIEW_CONFIRM"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/dim_gap_2"
			android:text="@string/str_verify"
			android:textColor="@color/button_text_color"
			android:textSize="@dimen/dim_font_2" />
	</LinearLayout>

</LinearLayout>