<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ID_LYT_ROOT"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="@dimen/dim_gap_2"
	android:orientation="horizontal">

	<TextView
		android:id="@+id/ID_TXTVIEW_SURVEY_DATE"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:textSize="@dimen/dim_font_2"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_survey_date"/>

	<TextView
		android:id="@+id/ID_TXTVIEW_SURVEY_TIME"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:textSize="@dimen/dim_font_2"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_survey_time"/>

	<TextView
		android:id="@+id/ID_TXTVIEW_HEART_RATE"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:textSize="@dimen/dim_font_2"
		android:textColor="@color/color_text_list_item"
		android:text="@string/str_heart_rate"/>

</LinearLayout>